AC_INIT([exspecto],[0.0.1],[test@test.ru])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile\
				 Common/Makefile\
				 Common/tinyxml/Makefile\
				 Common/libCommon/Makefile\
				 Common/libNet/Makefile\
				 Common/Agent/Makefile\
				 Common/ScanServer/Makefile\
				 Linux/Makefile\
				 Linux/LinuxSpec/Makefile\
				 ])
AC_PROG_LIBTOOL
AC_OUTPUT
