lspcdir = ./../../Linux/LinuxSpec
lib_LTLIBRARIES = libFtpScanner.la
libFtpScanner_la_SOURCES = FtpScanner.cpp FtpScanner.h ftpparse.cpp ftpparse.h
libFtpScanner_la_CPPFLAGS = -I../CommonFiles -I$(lspcdir) -I../libCommon -I../libNet
libFtpScanner_la_LIBADD = ../libCommon/libCommon.a ../libNet/libNet.a
