lspcdir = ./../../Linux/LinuxSpec
noinst_LIBRARIES = libCommon.a
libCommon_a_SOURCES = CLog.h CLog.cpp Event.h Semaphore.h SettingsContainer.h Singleton.hpp Thread.h ThreadsPool.cpp\
						CriticalSection.hpp FileSearch.h Mutex.h SettingsContainer.cpp SharedLib.h SmartPtr.hpp ThreadsPool.h
libCommon_a_CPPFLAGS = -I./../CommonFiles -I$(lspcdir)
